[tool.poetry]
name = "rock-paper-scissors"
version = "0.0.1"
description = "freeCodeCamp: Machine Learning with Python - Rock Paper Scissors"
authors = ["Paul Varner <fuzzyray@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
